# popt-dev

./: .gitignore  .gitmodules  101.md  LICENSE  README.md  cpuset.sh  jetson.md  kernelshark.sh  ros2_install.md  rt_kernel_patch.md  rt_kernel_verification.md  run_gui.sh  sample_filesystem.md  setfreq.sh  setup.py  sh_files.md  test.md  trace-cmd.md  tx2_rt_kernel.md  tx2_rt_patch.md  verification.md
OpenMP/: main  main.cpp
docs/: gui.md  profile.md  pypopt.md  ros2_install.md  ros2_install_tx2.md  ros2_install_windows.md  sample_filesystem.md  tx2_rt_kernel.md  xavier_install_ros2.md  xavier_nvpmodel_guide.md  xavier_rt_kernel.md  xavier_rt_kernel_final.md
eg1/: .CMakeLists.txt.swp  CMakeLists.txt  README.md  main.cpp  sample.json  sched_deadline.hpp
eg1/data/exp/: exp1.json
eg1/include/: dummy_workload.hpp  sched_core.hpp  sched_deadline.hpp  sched_exp.hpp
eg1/src/: dummy_workload.cpp  main.cpp  sched_deadline.cpp  sched_exp.cpp  sched_log.cpp
gui/: gui.py  rtp.ui  rtp_funcs.py
popt_dev/: default.ini
popt_dev/core/: log.py
popt_dev/gui/: gui.py  rtp.ui  rtp_funcs.py
pypopt/: default.ini
pypopt/core/: log.py
pypopt/gui/: gui.py  rtp.ui  rtp_funcs.py
pypopt/stat/: ext_base.tex  log_stat.py  stat.py  task.txt
pyscript/: callsh.py  exp.py  logparser.py  plot.py  schedulable.py  test.py  test.sh
rts/: CMakeLists.txt
rts/include/: .pt.hpp.swp  bcl.hpp  cho.hpp  egen.hpp  exp.hpp  gen.hpp  gfb.hpp  pt.hpp  pts.hpp  stat.hpp  task.hpp  task_set.hpp  thread.hpp  tsutil.hpp  unifast.hpp
rts/include/core/: dag.hpp  pt.hpp  pts.hpp  task.hpp  task_set.hpp  thread.hpp
rts/include/op/: exp.hpp  stat.hpp  tsutil.hpp
rts/include/sched/: bcl.hpp  cho.hpp  gfb.hpp
rts/src/: bcl.cpp  cho.cpp  egen.cpp  exp.cpp  gen.cpp  gfb.cpp  pt.cpp  pts.cpp  stat.cpp  task.cpp  task_set.cpp  thread.cpp  tsutil.cpp  unifast.cpp
rts/src/core/: dag.cpp  pt.cpp  pts.cpp  task.cpp  task_set.cpp  thread.cpp
rts/src/op/: exp.cpp  stat.cpp  tsutil.cpp
rts/src/sched/: bcl.cpp  cho.cpp  gfb.cpp
samples/dev/: .CMakeLists.txt.swp  CMakeLists.txt  README.md
samples/dev/data/exp/: exp1.json
samples/dev/data/ts/: ts1.json
samples/dev/include/: sample.hpp
samples/dev/src/: main.cpp  sample.cpp
samples/omp/: CMakeLists.txt
samples/omp/KSC-daphne/OpenMP/: .p2i_tot_1.out.swp  Makefile.deps  datatypes.h  euckernel.cpp  kernel  omp_log.cpp
samples/omp/KSC-daphne/include/: euc_worker.hpp  ndt_kernel.hpp  p2i_datatypes.h  p2i_worker.hpp  sched_core.hpp  seq_log.hpp
samples/omp/KSC-daphne/src/: euc_kernel.cpp  ndt_worker.cpp  p2i_worker.cpp
samples/omp/daphne/OpenMP/: dlworker.cpp  euckernel.cpp  kernel  main.cpp  ndtdatatypes.h  ndtkernel.cpp  omp_log.cpp  p2ikernel.cpp  seq_log.cpp
samples/omp/daphne/include/: benchmark.h  euc_datatypes.h  euc_kernel.hpp  ndt_datatypes.h  ndt_kernel.hpp  ndt_worker.hpp  omp_log.hpp  p2i_datatypes.h  p2i_kernel.hpp  p2i_worker.hpp  p2idatatypes.h  sched_deadline.hpp  sched_log.hpp
samples/omp/daphne/src/: euc_kernel.cpp  euc_worker.cpp  main.cpp  ndt_kernel.cpp  ndt_worker.cpp  p2i_kernel.cpp  p2i_worker.cpp  sched_log.cpp
samples/omp/data/exp/: exp1.json
samples/omp/data/ts/: ts1.json
samples/omp/include/: dagworker.hpp  dlworker.hpp  dummy_workload.hpp  sched_exp.hpp  sched_log.hpp
samples/omp/src/: dagworker.cpp  dlworker.cpp  dummy_workload.cpp  main.cpp  sched_deadline.cpp  sched_exp.cpp  sched_log.cpp
samples/ros2-dagsim/: README.md  package.xml
samples/ros2-dagsim/launch/: only_entry_node.launch.py  serial_chain.launch.py  simple_chain.launch.py  two_node.py
samples/ros2-dagsim/src/: entry_node.cpp  leaf_node.cpp  middle_node.cpp
samples/ros2-dagsim/src/utilities/: sched_core.cpp  sched_deadline.cpp
scripts/: cpuset.sh  cpusetbck.sh  kernelshark.sh
scripts/dockerfiles/: README.md  l4t-ros2-dashing-base
